Fix: Clean up styling and wording in `alignment-allows-nonrobust-decision-influences-and-doesn-t.md` - Use proper pluralization of "argmax"

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -23,10 +23,8 @@
 }
 
 // The <a> link back up to content is the last child of the <li>
-li[id^="user-content-fn-"] {
-  & *:nth-last-child(2) {
-    margin-bottom: 0; // Don't have unnecessary space before the <li>
-  }
+li[id^="user-content-fn-"] > *:nth-last-child(2) {
+  margin-bottom: 0; // Don't have unnecessary space before the <li>
 }
 
 .footnotes {
